<resources>
    <string name="app_name">Parcial</string>
    <string name="loginName">ThreeLine</string>
    <string name="loginUsername">Ingresar usuario</string>
    <string name="loginPassword">Ingresar contraseña</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="register">Registrarse</string>

    <string name="registerUsername">Ingrese un nombre de usuario</string>
    <string name="registerPassword">Ingrese una contraseña</string>
    <string name="registerEmail">Ingrese un correo electrónico</string>
    <string name="registerAge">Ingrese su edad</string>
    <string name="registerPhone">Ingrese un número telefónico</string>
    <string name="registerMale">Varón</string>
    <string name="registerFemale">Mujer</string>
    <string name="btnRegister">Registrarse</string>
    <string name="btnVolver">Volver</string>

    <string name="playX">Jugador 1 (X) empieza</string>
    <string name="playRehacer">Reiniciar</string>
</resources>